infra/tf-state/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-state
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    service: tf-state
